--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="#projects" class="btn btn-primary">
                     <i class="fas fa-rocket"></i> View My Projects
                 </a>
-                <a href="#contact" class="btn btn-secondary">
+                <a href="https://drive.google.com/file/d/1AXEYfchdbgbjRt-p2NAsmh07EbT9Hwzg/view?usp=sharing" class="btn btn-secondary" target="_blank">
                     <i class="fas fa-download"></i> Download Resume
                 </a>
             </div>
@@ -329,11 +329,11 @@
             <div class="certifications-grid">
                 <div class="cert-card">
                     <div class="cert-icon">
-                        <i class="fab fa-python"></i>
+<i class="fa-brands fa-google"></i>
                     </div>
-                    <h3>Python Advanced</h3>
-                    <p>Advanced Python programming concepts and best practices</p>
-                    <a href="#" class="cert-btn">View Certificate</a>
+<h3>Google Ai</h3>
+                    <p>Advanced Ai  concepts and best practices</p>
+                    <a href="https://drive.google.com/file/d/1QDn4Rh12St8ls0uzAMHeSQn5oVq7KSSM/view?usp=sharing" class="cert-btn" target="_blank">View Certificate</a>
                 </div>
 
                 <div class="cert-card">
@@ -402,7 +402,7 @@
                             <i class="fab fa-github"></i>
                             <div>
                                 <h4>GitHub</h4>
-                                <a href="https://github.com/shyamstrategy" target="_blank">github.com/shyam</a>
+                                <a href="https://github.com">github.com/shyam</a>
                             </div>
                         </div>
                         
@@ -469,4 +469,5 @@
 </body>
 
 </html>
+
 
