--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="FKwlNxvmwfD7NC32LEmxFWkJXOYy3vv81lMab2Slhvs" />
     <link rel="icon" href="image.jpg" type="image/png">
 
     <title>Shyam Sundar Sharma - Portfolio</title>
@@ -469,5 +470,6 @@
 </body>
 
 </html>
+
 
 
